Made skeleton for making a POST request for the Customer Resource to register a customer to the database

--- a/SoccerCitE_API/ApiLayer/ApiLayer.csproj
+++ b/SoccerCitE_API/ApiLayer/ApiLayer.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ModelLayer\ModelLayer.csproj" />
     <ProjectReference Include="..\LogicLayer\LogicLayer.csproj" />
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
 </Project>
