--- a/SoccerCitE_API/DataLayer/DataLayer.csproj
+++ b/SoccerCitE_API/DataLayer/DataLayer.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" /> <!-- TODO TMP Package... -->
   </ItemGroup>
 
   <PropertyGroup>
