--- a/.gitignore
+++ b/.gitignore
@@ -272,6 +272,9 @@ FakesAssemblies/
 # GhostDoc plugin setting file
 *.GhostDoc.xml
 
+# VSCode debug folder
+.vscode/
+
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
